--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
         <title>Battleship</title>
     </head>
     <body>
-        <div id="main-container">
-            <h1>BATTLESHIP</h1>
+        <h1>BATTLESHIP</h1>
+
+        <div id="board-container">
+            <div>
+                <h3>Your Board</h3>
+                <div id="player1-wrapper">
+                    <div id="player1-container"></div>
+                    <button id="randomButton">Randomise Ships</button>
+                </div>
+            </div>
+            <div>
+                <h3>Enemy's Board</h3>
+                <div id="player2-container"></div>
+            </div>
         </div>
-        <div id="player1-container"></div>
-        <div id="player2-container"></div>
         
-
-
     </body>
 </html>
